# sajs

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  .gitmodules  COPYING  README.md  meson.build  meson_options.txt
.reuse/: dep5
include/sajs/: sajs.h
src/: .clang-tidy  lexer.c  sajs.c  status.c  writer.c
test/: .clang-tidy  meson.build  test_init.c  test_parse.py  test_sajs.c  test_thru.py
test/headers/: .clang-tidy  test_header.c
test/pretty/: array_in_array.json  array_in_object.json  empty_array_in_object.json  empty_object_in_object.json  object_in_array.json  object_in_object.json  simple_array.json  simple_object.json
tools/: .clang-tidy  meson.build  sajs-pipe.1  sajs-pipe.c
